--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,7 +27,8 @@ jobs:
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
         with:
-          auth: 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
+          auth: ${{ secrets.GIST_SECRET }}
+          # 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
           gistID: 1889f159be6af42e2a2bc686649b1c53
           filename: test.json
           label: Test Coverage
