--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,11 @@ jobs:
           cache: "npm"
       - name: Install dependencies
         run: npm ci
-
+      - name: Get coverage perecentage
+        run:
+          SUMMARY="$(npm test -- --coverage --coverageReporters="text-summary""
+          TOKENS=($SUMMARY)
+          echo "COVERAGE=$(echo ${TOKENS[2]})" >> $GITHUB_ENV
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
         with:
