--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,8 @@ jobs:
           auth: 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
           # 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
 
-          gistID: f7c67fe390bd5c1fb3be032d6fa9140f
+          gistID: ${{ secrets.GIST_SECRET }} 
+          # f7c67fe390bd5c1fb3be032d6fa9140f
           filename: test.json
           label: Test Coverage
           message: 55%
