--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
         with:
-          auth: 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
+          auth: ${{ secrets.GIST_SECRET }} 
           # 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
 
-          gistID: ${{ secrets.GIST_SECRET }} 
+          gistID: f7c67fe390bd5c1fb3be032d6fa9140f
           # f7c67fe390bd5c1fb3be032d6fa9140f
           filename: test.json
           label: Test Coverage
