--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Get coverage perecentage
-        run:
-          SUMMARY="$(npm test -- --coverage --coverageReporters=text-summary)"
-          TOKENS=($SUMMARY)
-          echo "COVERAGE=$(echo ${TOKENS[2]})" >> $GITHUB_ENV
+        run: |
+          coverage=$(npm test -- --coverage --coverageReporters="text-summary" | grep -E 'Lines\s+:\s+([\d.]+)%' | awk '{print $NF}')
+          echo "::set-output name=coverage_percentage::$coverage"
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
         with:
@@ -38,6 +37,6 @@ jobs:
           # f7c67fe390bd5c1fb3be032d6fa9140f
           filename: test.json
           label: Test Coverage
-          message: 55%
+          message: ${{ coverage }}
           color: green
           namedLogo: jest
