--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,7 @@ jobs:
         run: npm ci
       - name: Get coverage perecentage
         run: |
-          coverage=$(npm test -- --coverage --coverageReporters="text-summary" | grep -E 'Lines\s+:\s+([\d.]+)%' | awk '{print $NF}')
+          coverage=$(npm test -- --coverage --coverageReporters="text-summary" | grep -oE 'Lines\s+:\s+([0-9]+(\.[0-9]+)?)%' | grep -oE '[0-9]+(\.[0-9]+)?')
           echo "::set-output name=coverage_percentage::$coverage"
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
