--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -37,6 +37,6 @@ jobs:
           # f7c67fe390bd5c1fb3be032d6fa9140f
           filename: test.json
           label: Test Coverage
-          message: ${{ scoverage_percentage }}
+          message: ${{ coverage_percentage }}
           color: green
           namedLogo: jest
