--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,18 +26,17 @@ jobs:
       - name: Get coverage perecentage
         run: |
           coverage=$(npm test -- --coverage --coverageReporters="text-summary" | grep -oE 'Lines\s+:\s+([0-9]+(\.[0-9]+)?)%' | grep -oE '[0-9]+(\.[0-9]+)?')
-          echo "::set-output name=coverage_percentage::$coverage"
           echo "COVERAGE=$(echo ${coverage})" >> $GITHUB_ENV
       - name: Create Coverage Badge
         uses: schneegans/dynamic-badges-action@v1.0.0
         with:
-          auth: ${{ secrets.GIST_SECRET }} 
+          auth: ${{ secrets.GIST_SECRET }}
           # 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
 
           gistID: f7c67fe390bd5c1fb3be032d6fa9140f
           # f7c67fe390bd5c1fb3be032d6fa9140f
           filename: test.json
           label: Test Coverage
-          message: ${{ env.COVERAGE }}
+          message: ${{ env.COVERAGE }}%
           color: green
           namedLogo: jest
